# stl-adapters

./: .gitignore  LICENSE  README.md  README_RU.md
lib/: processing.h
tests/: CMakeLists.txt  aggregate_by_key_ut.cpp  files_ut.cpp  filter_ut.cpp  flow_convertions_ut.cpp  join_ut.cpp  self_made_ut.cpp  split_expected_ut.cpp  transform_ut.cpp  write_ut.cpp
